project fixed, modified and updated
