# Backend/src/models/patient.js
@@ -19,28 +19,22 @@ const PatientSchema = new mongoose.Schema({
         trim: true,
         required: true
     },
-    // username: {
-    //     type: String,
-    //     trim: true,
-    //     unique: true,
-    //     index: true
-    // },
     firstName: {
         type: String,
-        trim: true,
+        trim: true
     },
     lastName: {
         type: String,
         trim: true,
     },
-    address: {
+    street: {
         type: String,
         trim: true,
-        // required: true
+        required: true
     },
     zipCode: {
         type: Number,
-        // required: true
+        required: true
     },
     profilePic: {
         type: String,
@@ -48,17 +42,18 @@ const PatientSchema = new mongoose.Schema({
     cityId: {
         type: mongoose.Schema.Types.ObjectId,
         ref: 'City',
-        // required: true
+    },
+    cityName:{
+        type: String,
+        trim: true
     },
     phone: {
         type: String,
-        trim: true,
-        // required: true
+        trim: true
     },
     birthDate: {
-        type: Date,
-        trim: true,
-        // required: true
+        type: String,
+        trim: true
     },
     gender: {
         type: String,
@@ -72,7 +67,6 @@ const PatientSchema = new mongoose.Schema({
     messages: [{            
         type: mongoose.Schema.Types.ObjectId,
         ref:'Message',
-        // required: true,
     }],
     messageCount: {
         type: Number,
